se aplican correcciones de ortografía

--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -45,7 +45,7 @@ msgstr "Resumen -- aspectos destacados de la versión"
 
 #: ../Doc/whatsnew/3.3.rst:60
 msgid "New syntax features:"
-msgstr "Nuevas caracteríticas de sintaxis:"
+msgstr "Nuevas características de sintaxis:"
 
 #: ../Doc/whatsnew/3.3.rst:62
 msgid ""
@@ -99,7 +99,7 @@ msgstr "Nuevas características incorporadas:"
 
 #: ../Doc/whatsnew/3.3.rst:76
 msgid "Reworked :ref:`I/O exception hierarchy <pep-3151>`."
-msgstr "Se reelabora :ref:`I/O exception hierarchy <pep-3151>` ."
+msgstr "Se reediseña :ref:`I/O exception hierarchy <pep-3151>` ."
 
 #: ../Doc/whatsnew/3.3.rst:78
 msgid "Implementation improvements:"
@@ -226,8 +226,8 @@ msgstr ""
 msgid ""
 "PEP 3118: New memoryview implementation and buffer protocol documentation"
 msgstr ""
-"PEP 3118: Nueva implementación de memoryview y en la documentación del "
-"protocolo del búffer"
+"PEP 3118: Nueva implementación de vista de memoria y en la documentación del "
+"protocolo del buffer"
 
 #: ../Doc/whatsnew/3.3.rst:142
 msgid "The implementation of :pep:`3118` has been significantly improved."
@@ -241,11 +241,12 @@ msgid ""
 "or returned incorrect results for non-contiguous or multi-dimensional input "
 "have been fixed."
 msgstr ""
-"La nueva implementación de memoryview corrige exhaustivamente todos los "
-"problemas de propiedad y duración de los campos asignados dinámicamente en "
-"la estructura de Py_buffer que dió lugar a varios informes de bloqueo. "
-"Además, se han corregido varias funciones que se bloquearon o devolvieron "
-"resultados incorrectos para entradas no contigua o multidimensional."
+"La nueva implementación de la vista de memoria corrige exhaustivamente todos "
+"los problemas de propiedad y duración de los campos asignados dinámicamente "
+"en la estructura de Py_buffer que ha dado lugar a varios informes de "
+"bloqueo. Además, se han corregido varias funciones que se bloquearon o "
+"devolvieron resultados incorrectos para entradas no contigua o "
+"multidimensional."
 
 #: ../Doc/whatsnew/3.3.rst:150
 msgid ""
@@ -377,7 +378,7 @@ msgstr "(Contribución por Stefan Krah en el issue `10181` .)"
 
 #: ../Doc/whatsnew/3.3.rst:203
 msgid ":pep:`3118` - Revising the Buffer Protocol"
-msgstr ":pep:`3118` - Revisando el protocolo de búffer"
+msgstr ":pep:`3118` - Revisando el protocolo de buffer"
 
 #: ../Doc/whatsnew/3.3.rst:209
 msgid "PEP 393: Flexible String Representation"
@@ -413,11 +414,11 @@ msgid ""
 "string (in the legacy format and in the new efficient storage)."
 msgstr ""
 "Por parte de la API de C, :pep: `393` es totalmente compatible con versiones "
-"anteriores. La API antigüa debería quedar disponible al menos por cinco "
-"años. Las aplicaciones que usan la API antigüa no saldrán beneficiadas por "
+"anteriores. La API antigua debería quedar disponible al menos por cinco "
+"años. Las aplicaciones que usan la API antigua no saldrán beneficiadas por "
 "la reducción de memoria, o -peor- podrían usar un bit más de memoria, debido "
-"a que python necesitaría mantener dos versiones de cada string (en el "
-"formato antigüo y en el nuevo almacenamiento)"
+"a que python necesitaría mantener dos versiones de cada cadena de caracteres "
+"(en el formato antiguo y en el nuevo almacenamiento)"
 
 #: ../Doc/whatsnew/3.3.rst:227
 msgid "Functionality"
@@ -434,7 +435,7 @@ msgid ""
 "between narrow and wide builds no longer exists and Python now behaves like "
 "a wide build, even under Windows."
 msgstr ""
-"Ahora python admite siempre el rango completo de codigos Unicode, incluyendo "
+"Ahora python admite siempre el rango completo de códigos Unicode, incluyendo "
 "los que no son BMP (es decir, ``U+0000`` to ``U+10FFFF``). La distinción "
 "entre ancho y angosto ya no existe, y python se comporta ahora como una "
 "compilación amplia, incluso en sistemas windows."
@@ -445,7 +446,7 @@ msgid ""
 "also been fixed, for example:"
 msgstr ""
 "Con la eliminación de las construcciones estrechas, han sido solucionados "
-"tambien los problemas específicos referentes a este tipo de construcciones, "
+"también los problemas específicos referentes a este tipo de construcciones, "
 "por ejemplo:"
 
 #: ../Doc/whatsnew/3.3.rst:239
@@ -478,7 +479,7 @@ msgid ""
 "all other functions in the standard library now correctly handle non-BMP "
 "code points."
 msgstr ""
-"todas las demás funciones en la librería estandar ahora gestionan de forma "
+"todas las demás funciones en la librería estándar ahora gestionan de forma "
 "correcta los puntos de código que no son BMP."
 
 #: ../Doc/whatsnew/3.3.rst:251
@@ -591,7 +592,7 @@ msgid ""
 msgstr ""
 "Este lanzador se invoca de forma implícita cuando haces doble click en "
 "archivos ``*.py``. Si el sistema tiene instalada una única versión de "
-"python, ésta versión será usada para ejecutar el archivo. Si hay multiples "
+"python, ésta versión será usada para ejecutar el archivo. Si hay múltiples "
 "versiones instaladas en el sistema, se utilizara por defecto la versión más "
 "reciente pero ésto puede ser anulado incluyendo una \"línea shebang\" estilo "
 "Unix en el script de Python."
@@ -644,7 +645,7 @@ msgstr "Modificación de la ruta del instalador: :ref:`windows-path-mod`"
 
 #: ../Doc/whatsnew/3.3.rst:327
 msgid "PEP 3151: Reworking the OS and IO exception hierarchy"
-msgstr "PEP 3151: Reelaboración de la jerarquía de excepciones de IO y OS"
+msgstr "PEP 3151: Rediseño de la jerarquía de excepciones de IO y OS"
 
 #: ../Doc/whatsnew/3.3.rst:329
 msgid ""
@@ -762,7 +763,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.3.rst:392
 msgid ":pep:`3151` - Reworking the OS and IO Exception Hierarchy"
-msgstr ":pep:`3151` - Reelaboración de la jerarquía de excepciones de IO y OS"
+msgstr ":pep:`3151` - Rediseño de la jerarquía de excepciones de IO y OS"
 
 #: ../Doc/whatsnew/3.3.rst:393
 msgid "PEP written and implemented by Antoine Pitrou"
@@ -773,6 +774,7 @@ msgid "PEP 380: Syntax for Delegating to a Subgenerator"
 msgstr "PEP 380: Sintaxis para delegar en un subgenerador"
 
 #: ../Doc/whatsnew/3.3.rst:404
+#, fuzzy
 msgid ""
 "PEP 380 adds the ``yield from`` expression, allowing a :term:`generator` to "
 "delegate part of its operations to another generator. This allows a section "
@@ -782,9 +784,10 @@ msgid ""
 msgstr ""
 "PEP 380 agrega la expresión ``yield from``, permitiendo que un :term:"
 "`generator` delegue parte de sus operaciones a otro generador. Esto permite "
-"factorizar una sección de código que contenga la palabra :keyword:`yield` y "
-"ubicarla en otro generador. Además, el subgenerador puede regresar con un "
-"valor y el valor se pone a disposición del generador que delega."
+"tomar en consideración una sección de código que contenga la palabra :"
+"keyword:`yield` y ubicarla en otro generador. Además, el subgenerador puede "
+"regresar con un valor y el valor se pone a disposición del generador que "
+"delega."
 
 #: ../Doc/whatsnew/3.3.rst:411
 msgid ""
@@ -951,7 +954,7 @@ msgid ""
 "The string representation of those objects is also changed to include the "
 "new, more precise information::"
 msgstr ""
-"La representación en cadena de estos objetos, tambien se ha modificado para "
+"La representación en cadena de estos objetos, también se ha modificado para "
 "incluir la información nueva y más precisa:"
 
 #: ../Doc/whatsnew/3.3.rst:606
@@ -1131,7 +1134,7 @@ msgstr ""
 "`importlib.__import__`. Este trabajo conduce a completar la \"fase 2\" de :"
 "pep:`302`. Hay múltiples beneficios en éste cambio. En primer lugar, ha "
 "permitido que la mayoría de la maquinaria que potencia las importaciones sea "
-"expuesta, en vez de estar implícitas y ocultas en el código de C. Tambien "
+"expuesta, en vez de estar implícitas y ocultas en el código de C. También "
 "proporciona una única implementación para todas las máquinas virtuales de "
 "python que admitan el uso de Python 3.3 lo que ayuda a terminar con "
 "cualquier desviación específica de VM en la semántica de importación. Y "
@@ -1289,7 +1292,7 @@ msgid ""
 "`366`. Once again, import itself is already setting this on all loaders "
 "from :mod:`importlib` and import itself is setting the attribute post-load."
 msgstr ""
-"Tambien se espera que ahora los cargadores establezcan el atributo "
+"También se espera que ahora los cargadores establezcan el atributo "
 "``__package__`` de :pep:`366`. Una vez más, la importación por sí misma ya "
 "está configurando ésto en todos los cargadores del módulo :mod:`importlib` y "
 "la importación misma está configurando la post carga del atributo."
@@ -1400,8 +1403,8 @@ msgstr ""
 msgid ""
 "Raw bytes literals can now be written ``rb\"...\"`` as well as ``br\"...\"``."
 msgstr ""
-"Los literales de bytes sin formato ahora se pueden escribir `` rb \"...\" `` "
-"así como `` br \"...\"``."
+"Los literales de bytes sin formato ahora se pueden escribir ``rb \"...\" `` "
+"así como ``br \"...\"``."
 
 #: ../Doc/whatsnew/3.3.rst:809
 msgid "(Contributed by Antoine Pitrou in :issue:`13748`.)"
@@ -1675,8 +1678,8 @@ msgid ""
 "issue:`13641`.)"
 msgstr ""
 "Las cadenas Unicode de solo ASCII ahora son aceptadas por las funciones de "
-"decodificación de la interfaz moderna: mod: `base64`. Por ejemplo, `` base64."
-"b64decode ('YWJj') `` devuelve `` b'abc'``. (Contribución por Catalin Iacob "
+"decodificación de la interfaz moderna: mod: `base64`. Por ejemplo, ``base64."
+"b64decode ('YWJj') `` devuelve ``b'abc'``. (Contribución por Catalin Iacob "
 "en: número: `13641`.)"
 
 #: ../Doc/whatsnew/3.3.rst:950
@@ -1690,7 +1693,7 @@ msgid ""
 "Antoine Pitrou in :issue:`13637`.)"
 msgstr ""
 "Además de los objetos binarios que normalmente aceptan, las funciones "
-"``a2b_`` ahora tambien aceptan cadenas de sólo ASCII como dato de entrada. "
+"``a2b_`` ahora también aceptan cadenas de sólo ASCII como dato de entrada. "
 "(Contribución por Antoine Petrou en :issue:`13637`.)"
 
 #: ../Doc/whatsnew/3.3.rst:958
@@ -2024,7 +2027,7 @@ msgid ""
 msgstr ""
 "El rango de ganancias del rendimiento va de 10x para las aplicaciones de "
 "base de datos, a 100x para aplicaciones numéricamente intensivas. Estos "
-"números son ganancias esperadas para las preciciones estandar usadas en la "
+"números son ganancias esperadas para las preciciones estándar usadas en la "
 "aritmética de punto flotante decimal. Dado que la precisión es configurable "
 "por el usuario, las cifras exactas pueden variar. Por ejemplo, en la "
 "aritmética de enteros bignum, las diferencias pueden ser significativamente "
@@ -2485,7 +2488,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.3.rst:1315
 msgid "You can also create addresses from parts::"
-msgstr "Tambien puedes crear direcciones a partir de partes::"
+msgstr "También puedes crear direcciones a partir de partes::"
 
 #: ../Doc/whatsnew/3.3.rst:1325
 msgid "Decoding to unicode is done automatically::"
@@ -2706,8 +2709,8 @@ msgid ""
 "`12888`, :issue:`7311`.)"
 msgstr ""
 ":class:`html.parser.HTMLParser` ahora puede analizar el marcado no válido "
-"sin generar errores, por lo tanto, el argumento *strict del constructor y la "
-"excepción: exc:` ~ html.parser.HTMLParseError` ahora están en desuso. La "
+"sin generar errores, por lo tanto, el argumento *strict* del constructor y "
+"la excepción: exc:`~html.parser.HTMLParseError` ahora están en desuso. La "
 "habilidad de analizar marcado inválido es el resultado de un número de "
 "correcciones que también están disponibles en la última versión de solución "
 "de bugs de Python 2.7/3.2. (Contribución de Ezio Melotti en :issue:`15114`, "
@@ -2726,7 +2729,7 @@ msgstr ""
 "Se ha agregado un nuevo diccionario: data: `~ html.entities.html5` que "
 "asigna referencias de caracteres con nombre HTML5 a los caracteres Unicode "
 "equivalentes (por ejemplo,` `html5 ['gt;'] == '>'` `) al módulo: mod: `html."
-"entities`. El diccionario ahora tambien es utilizado por la clase `~html."
+"entities`. El diccionario ahora también es utilizado por la clase `~html."
 "parser.HTMLParser`. (Contribución de Ezio Melotti en :issue:`11113` y :issue:"
 "`15156`.)"
 
@@ -3256,13 +3259,12 @@ msgstr ""
 "al que pertenece el usuario especificado."
 
 #: ../Doc/whatsnew/3.3.rst:1687
-#, fuzzy
 msgid ""
 ":func:`~os.times` and :func:`~os.uname`: Return type changed from a tuple to "
 "a tuple-like object with named attributes."
 msgstr ""
 ":func:`~os.times` and :func:`~os.uname`: El tipo de retorno cambió de tupla "
-"a un objeto similar a una tupla con atributos con nombre."
+"a un objeto tipo tupla con atributos con nombre."
 
 #: ../Doc/whatsnew/3.3.rst:1690
 msgid ""
@@ -3310,7 +3312,7 @@ msgid ""
 msgstr ""
 "La finalización de tabulaciones ahora está disponible no solo para los "
 "nombres de los comandos, sino también para sus argumentos. Por ejemplo, para "
-"el comando ``break'', se completan las funciones y los nombres de archivo."
+"el comando ``break``, se completan las funciones y los nombres de archivo."
 
 #: ../Doc/whatsnew/3.3.rst:1712
 msgid "(Contributed by Georg Brandl in :issue:`14210`)"
@@ -3573,7 +3575,7 @@ msgid ""
 "information about it;"
 msgstr ""
 ":func:`~signal.sigwaitinfo`: Espera una señal, devolviendo información "
-"detallada sobre ella."
+"detallada sobre ella;"
 
 #: ../Doc/whatsnew/3.3.rst:1833
 msgid ""
@@ -4096,12 +4098,16 @@ msgstr ""
 "Victor Stinner in :issue:`10278`.)"
 
 #: ../Doc/whatsnew/3.3.rst:2072
+#, fuzzy
 msgid ""
 "To improve cross platform consistency, :func:`~time.sleep` now raises a :exc:"
 "`ValueError` when passed a negative sleep value.  Previously this was an "
 "error on posix, but produced an infinite sleep on Windows."
 msgstr ""
-"Para mejorar la consistencia entre plataformas, la función :func:`~time."
+"Para mejorar la consistencia entre plataformas, la función :func:`~time "
+"ahora lanza un :exc:`ValueError` cuando se le pasa un valor negativo. "
+"Anteriormente ésto era un error en posix, pero producía una suspensión "
+"definitiva en windows."
 
 #: ../Doc/whatsnew/3.3.rst:2078
 msgid "types"
@@ -4260,7 +4266,7 @@ msgid ""
 "encode an ASCII string to UTF-8 doesn't need to encode characters anymore, "
 "the UTF-8 representation is shared with the ASCII representation"
 msgstr ""
-"Codificar una cadena ASCII a UTF-8 ya no necesita codificar caracteres, la "
+"codificar una cadena ASCII a UTF-8 ya no necesita codificar caracteres, la "
 "representación UTF-8 se comparte con la representación ASCII"
 
 #: ../Doc/whatsnew/3.3.rst:2158
@@ -4272,7 +4278,7 @@ msgid ""
 "repeating a single ASCII letter and getting a substring of an ASCII string "
 "is 4 times faster"
 msgstr ""
-"Repetir una única letra ASCII y obtener una subcadena de una cadena ASCII es "
+"repetir una única letra ASCII y obtener una subcadena de una cadena ASCII es "
 "4 veces más rápido"
 
 #: ../Doc/whatsnew/3.3.rst:2162
@@ -4517,8 +4523,7 @@ msgstr ""
 ":meth:`importlib.abc.SourceLoader.path_mtime` ha quedado obsoleto, a favor "
 "de :meth:`importlib.abc.SourceLoader.path_stats` ya que los archivos de "
 "código de bytes ahora almacenan tanto la hora de modificación como el tamaño "
-"del archivo fuente desde el cual fué se compiló el archivo de código de "
-"bytes."
+"del archivo fuente desde el cual se compiló el archivo de código de bytes."
 
 #: ../Doc/whatsnew/3.3.rst:2264
 msgid "Deprecated functions and types of the C API"
@@ -4739,7 +4744,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.3.rst:2334
 msgid "Porting to Python 3.3"
-msgstr "Transferencia a Python 3.3"
+msgstr "Migración a Python 3.3"
 
 #: ../Doc/whatsnew/3.3.rst:2336
 msgid ""
@@ -4751,7 +4756,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.3.rst:2342
 msgid "Porting Python code"
-msgstr "Transferencia a código Python"
+msgstr "Portando código Python"
 
 #: ../Doc/whatsnew/3.3.rst:2344
 msgid ""
@@ -5011,14 +5016,13 @@ msgstr ""
 "decisiones afectadas por la versión AST, use :attr:`sys.version_info` para "
 "tomar la decisión."
 
-# no sé como quedo esto
 #: ../Doc/whatsnew/3.3.rst:2450
 msgid ""
 "Code that used to work around the fact that the :mod:`threading` module used "
 "factory functions by subclassing the private classes will need to change to "
 "subclass the now-public classes."
 msgstr ""
-"El código que solía evitar el hecho de que el módulo :mod:`threading` "
+"El código que solía solucionar el hecho de que el módulo :mod:`threading` "
 "utilizaba funciones de fábrica mediante la subclase de las clases privadas "
 "tendrá que cambiar a la subclase de las clases ahora públicas."
 
@@ -5036,9 +5040,8 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.3.rst:2461
 msgid "Porting C code"
-msgstr "Transferencia a código C"
+msgstr "Portando código C"
 
-# tirandola a pegar..
 #: ../Doc/whatsnew/3.3.rst:2463
 msgid ""
 "In the course of changes to the buffer API the undocumented :c:member:"
@@ -5046,7 +5049,7 @@ msgid ""
 "removed and the layout of the :c:type:`PyMemoryViewObject` has changed."
 msgstr ""
 "En el curso de cambios a la API del buffer la estructura indocumentada :c:"
-"member:`~Py_buffer.smalltable` member of the :c:type:`Py_buffer` ha sido "
+"member:`~Py_buffer.smalltable` miembro de :c:type:`Py_buffer` ha sido "
 "eliminada, y el diseño de :c:type:`PyMemoryViewObject` se ha cambiado."
 
 #: ../Doc/whatsnew/3.3.rst:2468
@@ -5088,7 +5091,7 @@ msgstr ""
 #: ../Doc/whatsnew/3.3.rst:2483
 msgid ":c:func:`PyImport_GetMagicNumber` now returns ``-1`` upon failure."
 msgstr ""
-":c:func:`PyImport_GetMagicNumber` ahora devuelve` `-1 '' en caso de falla."
+":c:func:`PyImport_GetMagicNumber` ahora devuelve``-1`` en caso de falla."
 
 #: ../Doc/whatsnew/3.3.rst:2485
 msgid ""
@@ -5099,7 +5102,7 @@ msgid ""
 msgstr ""
 "Como valor negativo para el argumento *level* de la función :func:"
 "`__import__`  ya no es válido, y lo mismo ahora es válido para la función :c:"
-"func:`PyImport_ImportModuleLevel`. Esto tambien significa que el valor de "
+"func:`PyImport_ImportModuleLevel`. Esto también significa que el valor de "
 "*level* usado por la función :c:func:`PyImport_ImportModuleEx` ahora es "
 "``0`` en vez de ``-1``."
 
@@ -5118,10 +5121,10 @@ msgid ""
 msgstr ""
 "Se ha reducido el rango de nombres de archivo posibles para las extensiones "
 "C. Muy raramente se han suprimido las ortografías utilizadas: en POSIX, los "
-"archivos denominados ''xxxmodule.so'', ''xxxmodule.abi3.so'' y ''xxxmodule."
-"cpython-*.so'' ya no se reconocen como la implementación del módulo "
-"''xxx''.  Si ha estado generando estos archivos, tiene que cambiar a las "
-"otras ortografías (es decir, eliminar la cadena ''módulo'' de los nombres de "
+"archivos denominados ``xxxmodule.so``, ``xxxmodule.abi3.so`` y ``xxxmodule."
+"cpython-*.so`` ya no se reconocen como la implementación del módulo ``xxx``. "
+"Si ha estado generando estos archivos, tiene que cambiar a las otras "
+"ortografías (es decir, eliminar la cadena `módulo`` de los nombres de "
 "archivo)."
 
 #: ../Doc/whatsnew/3.3.rst:2502
