se corrigen detalles de ortografía

--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -31,9 +31,9 @@ msgid ""
 "`changelog <https://docs.python.org/3.3/whatsnew/changelog.html>`_."
 msgstr ""
 "Éste artículo explica las nuevas características en python 3.3, en "
-"comparación con la versión 3.2. Python 3.3 fué lanzado el 29 de septiembre "
-"de 2012. Para más detalles, ver el log de cambios en la dirección <https://"
-"docs.python.org/3.3/whatsnew/changelog.html>."
+"comparación con la versión 3.2. Python 3.3 se lanzó el 29 de septiembre de "
+"2012. Para más detalles, ver el log de cambios en la dirección <https://docs."
+"python.org/3.3/whatsnew/changelog.html>."
 
 #: ../Doc/whatsnew/3.3.rst:51
 msgid ":pep:`398` - Python 3.3 Release Schedule"
@@ -148,7 +148,7 @@ msgstr "La aleatoriedad en los hash está habilitada de forma predeterminada."
 msgid "Please read on for a comprehensive list of user-facing changes."
 msgstr ""
 "Por favor continúa leyendo para obtener una lista completa de los cambios de "
-"cara al usuaio."
+"cara al usuario."
 
 #: ../Doc/whatsnew/3.3.rst:100
 msgid "PEP 405: Virtual Environments"
@@ -181,7 +181,7 @@ msgid ""
 "base of a virtual environment's directory tree."
 msgstr ""
 "Este PEP agrega el módulo :mod:`venv` para acceso programático, y el script "
-"``pyvenv`` para administración y acceso a través de linea de comandos. El "
+"``pyvenv`` para administración y acceso a través de línea de comandos. El "
 "intérprete de python busca un archivo llamado ``pyvenv.cfg``, cuya "
 "existencia señala la base de un árbol de directorios en el entorno virtual."
 
@@ -269,7 +269,7 @@ msgid ""
 msgstr ""
 "La documentación se ha actualizado y se han establecido claramente las "
 "responsabilidades tanto para los exportadores como para los consumidores. "
-"Los indicadores de solicitud de búfer se agrupan en indicadores básicos y "
+"Los indicadores de solicitud de buffer se agrupan en indicadores básicos y "
 "compuestos. Se explica el diseño de memoria de matrices de estilo NumPy no "
 "contiguas y multidimensionales."
 
@@ -312,7 +312,7 @@ msgid ""
 "or c are now hashable.  (Contributed by Antoine Pitrou in :issue:`13411`.)"
 msgstr ""
 "Los objetos de vista de memoria unidimensionales de tipo hash con formatos "
-"B, b, o c ahora son hashables (Contribución de Antoine Pitrou en el issue "
+"B, b, o c ahora son hashables (Contribución por Antoine Pitrou en el issue "
 "`13411`.)"
 
 #: ../Doc/whatsnew/3.3.rst:176
@@ -322,7 +322,7 @@ msgid ""
 msgstr ""
 "Se admite el corte arbitrario de cualquier tipo de array unidimensional. Por "
 "ejemplo, ahora es posible revertir una vista de memoria en O(1) utilizando "
-"un valor negativo para el indice STEP."
+"un valor negativo para el índice STEP."
 
 #: ../Doc/whatsnew/3.3.rst:180 ../Doc/whatsnew/3.3.rst:1132
 msgid "API changes"
@@ -428,7 +428,9 @@ msgstr "Funcionalidad"
 msgid "Changes introduced by :pep:`393` are the following:"
 msgstr "Los cambios introducidos en el :pep:`393` son los siguientes:"
 
+# Poner en cursiva la palabra UNICODE, verdad?
 #: ../Doc/whatsnew/3.3.rst:231
+#, fuzzy
 msgid ""
 "Python now always supports the full range of Unicode code points, including "
 "non-BMP ones (i.e. from ``U+0000`` to ``U+10FFFF``).  The distinction "
@@ -1195,7 +1197,7 @@ msgid ""
 msgstr ""
 "En términos de buscadores,: class: ʻimportlib.machinery.FileFinder` expone "
 "el mecanismo utilizado para buscar archivos fuente y de código de bytes de "
-"un módulo. Anteriormente, esta clase era un miembro implícito de: attr: `sys."
+"un módulo. Anteriormente, ésta clase era un miembro implícito de: attr: `sys."
 "path_hooks`."
 
 #: ../Doc/whatsnew/3.3.rst:723
@@ -1375,7 +1377,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.3.rst:796
 msgid "(Contributed by Petri Lehtinen in :issue:`12170`.)"
-msgstr "(Contribución de Petri Lehtinen en :issue:`12170`.)"
+msgstr "(Contribución por Petri Lehtinen en :issue:`12170`.)"
 
 #: ../Doc/whatsnew/3.3.rst:798
 msgid ""
@@ -1403,8 +1405,8 @@ msgstr ""
 msgid ""
 "Raw bytes literals can now be written ``rb\"...\"`` as well as ``br\"...\"``."
 msgstr ""
-"Los literales de bytes sin formato ahora se pueden escribir ``rb \"...\" `` "
-"así como ``br \"...\"``."
+"Los literales de bytes sin formato ahora se pueden escribir ``rb\"...\" `` "
+"así como ``br\"...\"``."
 
 #: ../Doc/whatsnew/3.3.rst:809
 msgid "(Contributed by Antoine Pitrou in :issue:`13748`.)"
@@ -1766,7 +1768,7 @@ msgid ""
 msgstr ""
 "El códec :mod:`~encodings.mbcs` ha sido reescrito para manejar "
 "correctamente  los controladores de error ``reemplazar`` e ``ignorar`` en "
-"todas las versiones Windows. El codec `~encodings.mbcs` ahora admite todos "
+"todas las versiones Windows. El códec `~encodings.mbcs` ahora admite todos "
 "los controladores de error, en lugar de solo ``replace`` para codificar e "
 "``ignore`` para decodificar."
 
@@ -2223,7 +2225,7 @@ msgstr ""
 "una :class:`~collections.abc.MutableMapping`. Por razones de velocidad, :"
 "attr:`~decimal.Context.flags` y :attr:`~decimal.Context.traps` siempre se "
 "refiere a la misma :class:`~collections.abc.MutableMapping` que el contexto "
-"con el que fué inicializado. Si se asigna un nuevo diccionario de señales, :"
+"con el que se inicializó. Si se asigna un nuevo diccionario de señales, :"
 "attr:`~decimal.Context.flags` y :attr:`~decimal.Context.traps` son "
 "actualizados con los nuevos valores, pero no hacen referencia al diccionario "
 "RHS."
@@ -2999,7 +3001,7 @@ msgstr ""
 "un descriptor de archivo (o socket) a otro. La frase \"copia cero\" se "
 "refiere al hecho de que la copia de los datos entre dos descriptores es "
 "realizada en su totalidad por el kernel, sin copiar los datos en los búferes "
-"del espacio de usuario. La funcion :func:`~os.sendfile` puede ser usada para "
+"del espacio de usuario. La función :func:`~os.sendfile` puede ser usada para "
 "copiar datos de forma eficiente desde un archivo en el disco a un conector "
 "de red, por ejemplo para descargar un archivo."
 
@@ -3466,7 +3468,7 @@ msgid ""
 ":func:`~shutil.disk_usage`: provides total, used and free disk space "
 "statistics.  (Contributed by Giampaolo Rodolà in :issue:`12442`.)"
 msgstr ""
-":func:`~shutil.disk_usage`: Proporciona estadìsticas sobre el espacio total, "
+":func:`~shutil.disk_usage`: Proporciona estadísticas sobre el espacio total, "
 "usado, y libre en el disco. (Contribución de Giampaolo Rodolà in :issue:"
 "`12442`.)"
 
@@ -3792,7 +3794,7 @@ msgid ""
 ":func:`~ssl.RAND_bytes`: generate cryptographically strong pseudo-random "
 "bytes."
 msgstr ""
-":func:`~ssl.RAND_bytes`: genera bytes pseudo-aleatorios criptograficamente "
+":func:`~ssl.RAND_bytes`: genera bytes pseudo-aleatorios criptográficamente "
 "fuertes."
 
 #: ../Doc/whatsnew/3.3.rst:1931
@@ -3858,7 +3860,9 @@ msgstr ""
 "atributo :attr:`~ssl.OP_NO_COMPRESSION` puede ser usado para deshabilitar la "
 "compresión. (Contribución de Antoine Pitrou en :issue:`13634`.)"
 
+# traduzco next protocol negotution?  3860
 #: ../Doc/whatsnew/3.3.rst:1957
+#, fuzzy
 msgid ""
 "Support has been added for the Next Protocol Negotiation extension using "
 "the :meth:`ssl.SSLContext.set_npn_protocols` method. (Contributed by Colin "
@@ -4041,9 +4045,9 @@ msgid ""
 "that used ``_thread.get_ident`` should likewise be changed to use the new "
 "public interface."
 msgstr ""
-"La funciòn anteriormente privada ``_thread.get_ident`` ahora está disponible "
+"La función anteriormente privada ``_thread.get_ident`` ahora está disponible "
 "como función pública :func:`threading.get_ident`. Ésto elimina varios casos "
-"de acceso directo al mídulo ``_thread`` en el stdlib. El código de terceros "
+"de acceso directo al módulo ``_thread`` en el stdlib. El código de terceros "
 "que usaba ``_thread.get_ident`` debería de igual forma ser cambiado para "
 "usar la nueva interfaz pública."
 
@@ -4211,7 +4215,7 @@ msgid ""
 "detailed reference."
 msgstr ""
 "El módulo :mod:`xml.etree.ElementTree` ahora importa su acelerador C "
-"predeterminado, ya no es necesario importar explicitamente :mod:`xml.etree."
+"predeterminado, ya no es necesario importar explícitamente :mod:`xml.etree."
 "cElementTree` (Éste módulo permanece para compatibilidad con versiones "
 "anteriores, pero ya está obsoleto). Además, la familia de métodos ``iter`` "
 "de :class:`~xml.etree.ElementTree.Element` se ha optimizado (Reescrito en "
@@ -4452,7 +4456,7 @@ msgid ""
 "`393`, use UTF-8, UTF-16 (``utf-16-le`` or ``utf-16-be``), or UTF-32 "
 "(``utf-32-le`` or ``utf-32-be``)"
 msgstr ""
-"El codec ``unicode_internal`` quedó obsoleto a causa del :pep:`393`, use "
+"El códec ``unicode_internal`` quedó obsoleto a causa del :pep:`393`, use "
 "UTF-8, UTF-16 (``utf-16-le`` o ``utf-16-be``), o UTF-32 (``utf-32-le`` or "
 "``utf-32-be``)"
 
@@ -4832,8 +4836,8 @@ msgid ""
 "import_module` rather than call :func:`__import__` directly."
 msgstr ""
 "El argumento *index* para la función :func:`__import__` ahora tiene un valor "
-"predeterminado de 0, en vez de -1, y ya no admite valores negativos. Fué un "
-"descuido en la implementación de :pep:`328` que el valor predeterminado "
+"predeterminado de 0, en vez de -1, y ya no admite valores negativos. Ha sido "
+"un descuido en la implementación de :pep:`328` que el valor predeterminado "
 "permaneciera en -1. Si necesita continuar realizando una importación "
 "relativa seguida por una importación absoluta, entonces realice la "
 "importación relativa usando un índice de 1, seguida por otra importación que "
@@ -4878,7 +4882,9 @@ msgstr ""
 "`sys.path_importer_cache` donde éste represente el uso de buscadores "
 "implícitos, pero semánticamente no debería cambiar nada."
 
+# q haago con ese path entry finder
 #: ../Doc/whatsnew/3.3.rst:2392
+#, fuzzy
 msgid ""
 ":class:`importlib.abc.Finder` no longer specifies a `find_module()` abstract "
 "method that must be implemented. If you were relying on subclasses to "
@@ -4891,7 +4897,7 @@ msgstr ""
 "implementar éste método, primero asegúrese de verificar la existencia del "
 "método. Sin embargo, probablemente desee verificar primero el "
 "`find_loader()`, en el caso de trabajar con los buscadores de entradas :term:"
-"` <path entry finder>`."
+"`<path entry finder>`."
 
 # me confunde lo de los ganchos de importacion...
 #: ../Doc/whatsnew/3.3.rst:2398
@@ -4984,7 +4990,7 @@ msgid ""
 "`~decimal.Context.clamp`.  (See :issue:`8540`.)"
 msgstr ""
 "El atributo ``Context._clamp`` que estaba obsoleto, ha sido eliminado del "
-"módulo :mod:`decimal`. Este fué reemplazado anteriormente por el atributo "
+"módulo :mod:`decimal`. Este se reemplazó anteriormente por el atributo "
 "público :attr:`~decimal.Context.clamp`. (Ver :issue:`8540`.)"
 
 #: ../Doc/whatsnew/3.3.rst:2439
@@ -5033,16 +5039,18 @@ msgid ""
 "code, but is mentioned here in case any application debug frameworks were "
 "interacting with it (:issue:`13550`)."
 msgstr ""
-"La indocumentada maquinaria de debugging en el modulo threading ha sido "
-"eliminada, simplificando el codigo. Esto no deberìa tener efecto en el "
-"código de producción, pero se menciona aquí en caso de que algun framework "
+"La indocumentada maquinaria de depuración en el módulo threading ha sido "
+"eliminada, simplificando el código. Esto no debería tener efecto en el "
+"código de producción, pero se menciona aquí en caso de que algún framework "
 "de depuración de aplicaciones interactúe con el (:issue:`13550`)."
 
 #: ../Doc/whatsnew/3.3.rst:2461
 msgid "Porting C code"
 msgstr "Portando código C"
 
+# q hago con c:member?
 #: ../Doc/whatsnew/3.3.rst:2463
+#, fuzzy
 msgid ""
 "In the course of changes to the buffer API the undocumented :c:member:"
 "`~Py_buffer.smalltable` member of the :c:type:`Py_buffer` structure has been "
@@ -5076,7 +5084,9 @@ msgstr ""
 "de la reducción de huella de memoria proporcionada por :pep:`393`, usted "
 "debe convertir su código al nuevo :doc:`Unicode API <../c-api/unicode>`."
 
+# Poner UNICODE en cursiva
 #: ../Doc/whatsnew/3.3.rst:2478
+#, fuzzy
 msgid ""
 "However, if you only have been using high-level functions such as :c:func:"
 "`PyUnicode_Concat()`, :c:func:`PyUnicode_Join` or :c:func:"
@@ -5101,7 +5111,7 @@ msgid ""
 "`PyImport_ImportModuleEx` is now ``0`` instead of ``-1``."
 msgstr ""
 "Como valor negativo para el argumento *level* de la función :func:"
-"`__import__`  ya no es válido, y lo mismo ahora es válido para la función :c:"
+"`__import__` ya no es válido, y lo mismo ahora es válido para la función :c:"
 "func:`PyImport_ImportModuleLevel`. Esto también significa que el valor de "
 "*level* usado por la función :c:func:`PyImport_ImportModuleEx` ahora es "
 "``0`` en vez de ``-1``."
@@ -5124,8 +5134,8 @@ msgstr ""
 "archivos denominados ``xxxmodule.so``, ``xxxmodule.abi3.so`` y ``xxxmodule."
 "cpython-*.so`` ya no se reconocen como la implementación del módulo ``xxx``. "
 "Si ha estado generando estos archivos, tiene que cambiar a las otras "
-"ortografías (es decir, eliminar la cadena `módulo`` de los nombres de "
-"archivo)."
+"ortografías (es decir, eliminar la cadena de caracteres ``módulo`` de los "
+"nombres de archivo)."
 
 #: ../Doc/whatsnew/3.3.rst:2502
 msgid "(implemented in :issue:`14040`.)"
